fix menu ressources responsive wrap

--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -193,25 +193,30 @@
   gap: $sm-space;
 
   @media only screen and (max-width: 600px) {
-    flex-direction: column;
+    // flex-direction: column;
     width: 100%;
     gap: 0.5rem;
     padding: $reg-space 0;
+    flex-wrap: wrap;
   }
 
   .reset-button {
     max-width: fit-content;
     aspect-ratio: 1/1;
     padding: 0 0.75rem;
-    @media only screen and (max-width: 600px) {
-      display: none;
-    }
   }
+
   .dropdown {
     flex: 1;
     display: flex;
     cursor: pointer;
     flex-direction: column;
+
+    &:first-of-type {
+      @media only screen and (max-width: 600px) {
+        min-width: 100%;
+      }
+    }
 
     .drowpdown-title {
       display: flex;
